# airtable-sheet-port

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  updater.json
.github/workflows/: build-release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  mockData.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  queries.rs  queries_tests.rs
apps/desktop/src/components/: AuditDropdown.tsx  CloseBehaviorDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CopyButton.tsx  ErrorBoundary.tsx  QuickNav.tsx  RelativeTime.tsx  ScreenHeader.tsx  SegmentedControl.tsx  Sidebar.tsx  Titlebar.tsx
apps/desktop/src/components/changes/: ChangeCard.tsx  DiffViewer.tsx
apps/desktop/src/components/permissions/: ConfirmationChips.tsx  PermissionPresetRow.tsx  RuleFormDialog.tsx  RuleRow.tsx
apps/desktop/src/components/settings/: CheckForUpdatesButton.tsx  GoogleJsonImport.tsx  McpClientsCard.tsx  McpServerCard.tsx  UpdateSection.tsx
apps/desktop/src/components/settings/__tests__/: GoogleJsonImport.test.ts
apps/desktop/src/components/tables/: RecordsTable.tsx
apps/desktop/src/components/workbench/: AddSpreadsheetDialog.tsx  FolderNameDialog.tsx  FolderTree.tsx  SheetGrid.tsx  SheetTabsBar.tsx  SheetWorkArea.tsx  WorkbenchSidebar.tsx  WorkbenchToolbar.tsx  glideTheme.ts
apps/desktop/src/hooks/: useAppStatus.ts  useAuditEvents.ts  useChanges.ts  useCloseBehavior.ts  useFonts.ts  useGoogleConfig.ts  useMcp.ts  usePermissions.ts  useSettings.ts  useSheetHistory.ts  useSidebarCollapsed.ts  useSources.ts  useTables.ts  useTheme.ts  useTokenStatus.ts  useUpdate.ts  useUpdateRestartNotice.ts  useWorkbench.ts
apps/desktop/src/i18n/: translations.ts  useTranslation.tsx
apps/desktop/src/lib/: constants.ts  demoData.ts  diff.ts  errors.ts  format.ts  ipc.ts  menu.ts  nav.ts  permissionPresets.ts  queryKeys.ts  theme.ts  workbenchDemo.ts
apps/desktop/src/lib/__tests__/: demoData.test.ts  diff.test.ts  format.test.ts  permissionPresets.test.ts  workbenchDemo.test.ts
apps/desktop/src/screens/: AuditLog.tsx  Changes.tsx  Dashboard.tsx  DataSources.tsx  Permissions.tsx  Settings.tsx  Tables.tsx
apps/mcp-server/: package.json  tsconfig.json
apps/mcp-server/scripts/: e2e-smoke.mjs
apps/mcp-server/src/: context.ts  index.ts  logger.ts  tools.ts
crates/sheet-port-core/: Cargo.toml
crates/sheet-port-core/sql/: schema.sql  seed.sql
crates/sheet-port-core/src/: audit.rs  audit_tests.rs  changes.rs  changes_tests.rs  constants.rs  db.rs  error.rs  heartbeat.rs  heartbeat_tests.rs  lib.rs  mcp_clients.rs  mcp_clients_tests.rs  mock_data.rs  mock_data_tests.rs  permissions.rs  permissions_tests.rs  sources.rs  test_fixtures.rs  types.rs  vault.rs  workbench.rs  workbench_tests.rs
crates/sheet-port-core/src/connectors/: connectors_tests.rs  google_sheets.rs  mock.rs  mod.rs  provider.rs
crates/sheet-port-core/src/google/: google_tests.rs  mod.rs  oauth.rs  tokens.rs
crates/sheet-port-mcp/: Cargo.toml
crates/sheet-port-mcp/src/: args.rs  args_tests.rs  http.rs  logging.rs  main.rs  server.rs  state.rs  tools.rs  tools_tests.rs
crates/sheet-port-mcp/tests/: http_transport.rs
docs/: architecture.md  connectors.md  development.md  ipc.md  mcp-tools.md  product-scope.md  security.md
examples/: claude-desktop-config.json
scripts/: e2e-smoke.mjs  stage-sidecar.mjs
