[package]
name = "sheet-port"
version = "0.1.0"
description = "Airtable - Sheet Port: Safe local port for AI agents to access tables and spreadsheets."
authors = ["Airtable - Sheet Port"]
edition = "2021"

[lib]
name = "sheet_port_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "bundled" compiles SQLite from source so the Rust side and the Node sidecar
# never depend on a system SQLite version.
rusqlite = { version = "0.37", features = ["bundled"] }
# Platform credential stores; tokens never leave the OS keychain.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
# chrono chosen over `time` for RFC 3339 parsing of sidecar-written timestamps.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
