[package]
name = "sheet-port"
version = "0.1.0"
description = "Airtable - Sheet Port: Safe local port for AI agents to access tables and spreadsheets."
authors = ["Airtable - Sheet Port"]
edition = "2021"

[lib]
name = "sheet_port_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# All broker logic (DB, permissions, changes, audit, connectors, keychain)
# lives in the shared core crate; this app is only the Tauri shell.
sheet-port-core = { path = "../../../crates/sheet-port-core" }
# Command payload structs (docs/ipc.md shapes) and audit metadata JSON.
serde = { workspace = true }
serde_json = { workspace = true }
